--- a/Option2.html
+++ b/Option2.html
@@ -623,7 +623,7 @@
             <section class="featured-track">
                 <h3 class="track-title">We'll be there for you</h3>
                 <p class="track-subtitle">(these 4 Ps we swear to you)</p>
-                <p>Experience the harmony of healthcare innovation through music. This debut single captures the essence of patient care, practice excellence, and professional dedication in a melody that resonates with healthcare professionals worldwide.</p>
+                <!-- <p>Experience the harmony of healthcare innovation through music. This debut single captures the essence of patient care, practice excellence, and professional dedication in a melody that resonates with healthcare professionals worldwide.</p> -->
                 
                 <!-- Audio Player -->
                 <div class="audio-player">
@@ -769,8 +769,7 @@
         <!-- About the Project Section -->
         <section class="about-section">
             <h2>About the Project</h2>
-            <p>Vonjo vi is not an artist, but an idea. It's a creative exploration to translate the challenges and triumphs of modern healthcare communication into music. Each track on this album represents a core concept we believe in—from patient activation to omnichannel strategy. This is our harmony for healthcare.</p>
-        </section>
+            <p>Vonjo vi is not an artist, but an idea.  </section>
 
         <footer class="footer">
             <div class="social-links">
