--- a/Option2.html
+++ b/Option2.html
@@ -611,7 +611,7 @@
                         </svg>
                         <span id="mainPlayText">Play Now</span>
                     </button>
-                    <a href="Vonjo_vi_Well_be_there_for_you.mp3" class="btn btn-secondary" download aria-label="Download We'll be there for you">
+                    <a href="Vonjo_vi_Well_be_there_for_you.mp3" target="_blank" class="btn btn-secondary" download aria-label="Download We'll be there for you">
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                             <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/>
                         </svg>
