--- a/Option2.html
+++ b/Option2.html
@@ -77,7 +77,7 @@
             width: 350px;
             height: 350px;
             max-width: 100%;
-            background: url('Album.png') center/cover, linear-gradient(135deg, #EE5340, #003b5c);
+            background: url('Album.gif') center/cover, linear-gradient(135deg, #EE5340, #003b5c);
             border-radius: 20px;
             margin: 0 auto 2rem;
             display: flex;
