--- a/Option1.html
+++ b/Option1.html
@@ -70,7 +70,7 @@
                 <!-- Album Art Section -->
                 <div class="flex flex-col items-center text-center">
                     <div class="relative group w-full max-w-sm">
-                        <img id="albumArt" src="Album.png" alt="Album Art for Vonjo vi" class="w-full h-auto rounded-lg shadow-2xl transition-transform duration-500 group-hover:scale-105">
+                        <img id="albumArt" src="Album.gif" alt="Album Art for Vonjo vi" class="w-full h-auto rounded-lg shadow-2xl transition-transform duration-500 group-hover:scale-105">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 rounded-lg">
                             <a id="downloadArtLink" href="https://placehold.co/1200x1200/003b5c/FFFFFF?text=Vonjo+vi" download="Vonjo_vi_Album_Art.png" class="text-white py-2 px-4 border border-white rounded-full hover:bg-white hover:text-black transition-colors">
                                 Download Poster
