--- a/Option2.html
+++ b/Option2.html
@@ -1159,22 +1159,22 @@
                         <div class="band-member-card">
                             <img src="Subb_Rock.jpg" alt="Photo of Member 1" class="member-thumbnail">
                             <h4 class="member-name">Subbha Dhalladoo</h4>
-                            <p class="member-position">Brand Steward (Lead Vocals)</p>
+                            <p class="member-position">Brand Steward (Harmonics)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Anka_Rock.jpg" alt="Photo of Member 2" class="member-thumbnail">
                             <h4 class="member-name">Anka Gorgiev, PhD</h4>
-                            <p class="member-position">Behavioral Strategist (Guitarist)</p>
+                            <p class="member-position">Behavioral Strategist (Rhythm)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Nolan_Rock.jpg" alt="Photo of Member 3" class="member-thumbnail">
                             <h4 class="member-name">Nolan Meyer</h4>
-                            <p class="member-position">Engagement Strategy (Bassist)</p>
+                            <p class="member-position">Engagement Strategy (Strings)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Julie_Rock.jpg" alt="Photo of Member 4" class="member-thumbnail">
                             <h4 class="member-name">Julie Yoon</h4>
-                            <p class="member-position">Sobi Client Partner (Drummer)</p>
+                            <p class="member-position">Sobi Client Partner (Lead Vocals)</p>
                         </div>
                     </div>
                     
@@ -1182,7 +1182,7 @@
                         <div class="band-member-card">
                             <img src="Nala_Rock.jpg" alt="Photo of Member 5" class="member-thumbnail">
                             <h4 class="member-name">Nala Kim</h4>
-                            <p class="member-position">Scientific Advisor (Keyboardist)</p>
+                            <p class="member-position">Scientific Advisor (Keyboard)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Dan_Rock.jpg" alt="Photo of Member 6" class="member-thumbnail">
@@ -1192,12 +1192,12 @@
                         <div class="band-member-card">
                             <img src="Jerlyn_Rock.jpg" alt="Photo of Member 7" class="member-thumbnail">
                             <h4 class="member-name">Jerlyn O'Donnell</h4>
-                            <p class="member-position">Art (Producer)</p>
+                            <p class="member-position">Art (Syth and Electronics)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Brendon_Rock.jpg" alt="Photo of Member 8" class="member-thumbnail">
                             <h4 class="member-name">Brendon Phalen, MD, MBA</h4>
-                            <p class="member-position">Founding Partner (Sound Engineer)</p>
+                            <p class="member-position">Founding Partner (Executive Producer)</p>
                         </div>
                     </div>
                 </section>
