WIP updated names

--- a/Option2.html
+++ b/Option2.html
@@ -1147,14 +1147,15 @@
 
 
         <section class="about-section">
-            <h2>About the Band</h2>
+            <h2>About BGB</h2>
             <p>Rare isn’t just a category for us.</p>
             <p>It’s a way of thinking, behaving and delivering efficiently on the needs of patients and the HCPs who treat them. To us, a disease that progresses this quickly needs equally progressive thinking and partnerships.</p>
                 <p><strong>Grounded in science. Driven by human truth. Fueled by exceptional creativity.</strong></p>
                 <p>This is our commitment to Sobi Vonjo, HCPs, and their patients. Rare, in every way, shape and form.</p> </section>
                 <section class="band-members-section">
-                   <!-- <h2 class="section-title">The Team</h2>-->
-                    
+                   <h2 class="section-title">The Band</h2>
+                   <p>This band takes the work very seriously but also likes to laugh, collaborate and solve key business problems, together.</p><p>They can even help when the show goes on the road, making stops at National Sales Meetings, conferences and any venue or channel in between.</p>
+                </br>
                     <div class="band-members-grid">
                         <div class="band-member-card">
                             <img src="Subb_Rock.jpg" alt="Photo of Member 1" class="member-thumbnail">
@@ -1192,7 +1193,7 @@
                         <div class="band-member-card">
                             <img src="Jerlyn_Rock.jpg" alt="Photo of Member 7" class="member-thumbnail">
                             <h4 class="member-name">Jerlyn O'Donnell</h4>
-                            <p class="member-position">Art (Syth and Electronics)</p>
+                            <p class="member-position">Art (Electronics/Synth)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Brendon_Rock.jpg" alt="Photo of Member 8" class="member-thumbnail">
