--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
                         </div>
                         <div class="band-member-card">
                             <img src="Dan_Rock.jpg" alt="Photo of Member 6" class="member-thumbnail">
-                            <h4 class="member-name">Dan Don0van</h4>
+                            <h4 class="member-name">Dan Donovan</h4>
                             <p class="member-position">Copy (Songwriter)</p>
                         </div>
                        
