--- a/index.html
+++ b/index.html
@@ -961,6 +961,7 @@
             border-radius: 15px;
             padding: 1.5rem;
             transition: all 0.3s ease;
+            text-align: center;
         }
 
         .band-member-card:hover {
