Thanks for the love!

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     });
                 }
                 
-                showLikeMessage('Thanks for the love! ❤️');
+                showLikeMessage('We\'ll be there for you! ❤️');
                 
             } else {
                 likeBtn.classList.remove('liked');
