--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
         }
 
         .download-card {
-            background: rgba(255, 255, 255, 0.05);
+            /* background: rgba(255, 255, 255, 0.05);*/
             border-radius: 15px;
             padding: 1.5rem;
             border: 1px solid rgba(255, 255, 255, 0.1);
