--- a/index.html
+++ b/index.html
@@ -1510,5 +1510,6 @@
                     </div>
                 </section>
     </div>
+    <div class="footer"> <img src="BGB_logo.png"></div>
 </body>
 </html>
