--- a/index.html
+++ b/index.html
@@ -1468,7 +1468,7 @@
                         <div class="band-member-card">
                             <img src="Nala_Rock.jpg" alt="Photo of Member 5" class="member-thumbnail">
                             <h4 class="member-name">Nala Kim</h4>
-                            <p class="member-position">Scientific Advisor (Keyboard)</p>
+                            <p class="member-position">MEng (Keyboard)</p>
                         </div>
                         <div class="band-member-card">
                             <img src="Jerlyn_Rock.jpg" alt="Photo of Member 7" class="member-thumbnail">
