--- a/index.html
+++ b/index.html
@@ -1462,7 +1462,7 @@
                     <div class="band-members-grid">
                          <div class="band-member-card">
                             <img src="Nolan_Rock.jpg" alt="Photo of Member 3" class="member-thumbnail">
-                            <h4 class="member-name">Nolan Meyer</h4>
+                            <h4 class="member-name">Nolan Mayer</h4>
                             <p class="member-position">Engagement Strategy (Strings)</p>
                         </div>
                         <div class="band-member-card">
