--- a/index.html
+++ b/index.html
@@ -1647,7 +1647,7 @@
                 <p><strong>Grounded in science. Driven by human truth. Fueled by exceptional creativity.</strong></p>
                 <p>This is our commitment to Sobi Vonjo, HCPs, and their patients. Rare, in every way, shape and form.</p>
         <br><br>
-                   <h2 >The Band</h2>
+                   <h2 id="band">The Band</h2>
                    <p>We take the work very seriously but we also like to laugh, collaborate and solve key business problems, together. We can even help when the show goes on the road, making stops at National Sales Meetings, conferences and any venue or channel in between.</p>
                 <br><br>
         <section class="band-members-section">
