--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
         align-items: center;
         gap: 0.5rem;
         margin: 0 auto;
-        min-height: 44px;
+        max-height: 34px;
          }
 
         .expand-btn:hover {
