--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,21 @@
         }
 /* Replaced @media (max-width: 768px) sections with this single one: */
         @media (max-width: 768px) {
+            .track-list {
+            display: grid;
+            gap: 0.5rem;
+            }
+             .track-item {
+            display: flex;
+            align-items: center;
+            padding: 0.5rem;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            }/**/
+
+
             .band-members-grid {
                 grid-template-columns: 1fr;
                 gap: 1rem;
