--- a/index.html
+++ b/index.html
@@ -1292,8 +1292,8 @@
             
             /* Since about-section now has 0rem padding, adjust bio content accordingly */
             .member-bio.expanded .bio-content {
-                margin-left: calc(-0.5rem - 0.5rem); /* Card padding + container padding */
-                margin-right: calc(-0.5rem - 0.5rem);
+               /*  margin-left: calc(-0.5rem - 0.5rem); Card padding + container padding 
+                margin-right: calc(-0.5rem - 0.5rem);*/
                 border-radius: 0;
                 padding-left: 1rem;
                 padding-right: 1rem;
