--- a/index.html
+++ b/index.html
@@ -1734,8 +1734,8 @@
 
                 <!-- Anne Marie Crivelli -->
                 <div class="band-member-card" data-member="annemarie">
-                    <img src="Amc_Rock.jpg" alt="Photo of Anne Marie Crivelli" class="member-thumbnail">
-                    <h3 class="member-name">Anne Marie Crivelli</h3>
+                    <img src="Amc_Rock.jpg" alt="Photo of Annemarie Crivelli" class="member-thumbnail">
+                    <h3 class="member-name">Annemarie Crivelli</h3>
                     <p class="member-position">Omnichannel, Platforms & Partnerships</p>
                     <button class="expand-btn" aria-expanded="false" aria-controls="annemarie-bio">
                         Read Bio
@@ -1743,7 +1743,7 @@
                     </button>
                     <div class="member-bio" id="annemarie-bio" aria-hidden="true">
                         <div class="bio-content">
-                            Anne Marie has her fingers on the pulse of every stream, station and channel we need to have in our brand plan. Ask her which systems, content and approaches work best and she'll break it down for you in detail. And the details, are everything.
+                            Annemarie has her fingers on the pulse of every stream, station and channel we need to have in our brand plan. Ask her which systems, content and approaches work best and she'll break it down for you in detail. And the details, are everything.
                         </div>
                     </div>
                 </div>
